tests/method/not_found.rev
struct Foo {}

Foo().unknown() // error: structure 'Foo' has no field 'unknown'